# questionable

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
egui_app/: Cargo.toml  README.md
egui_app/src/: egui_app.rs  main.rs  thread_pool.rs
egui_app/src/src/: app.rs  egui_app.rs  util.rs
locales/: en.yml  ru.yml
notes/: Cargo.toml  README.md
notes/src/: lib.rs
phosphor_icons/: Cargo.toml  README.md
phosphor_icons/src/: lib.rs
src/: .storage.rs.un~  app.rs  data.rs  egui_app.rs  font_icons.rs  id_gen.rs  main.rs  note.rs  note_folder.rs  note_tree.rs  storage.rs  task.rs  thread_pool.rs  trash.rs  tree_like.rs  util.rs
