[package]
name = "questionable"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui_extras = { version = "*", features = ["default", "image"] }
eframe = { version = "*", features = ["default", "wgpu"] }

rust-i18n = "3.1.4"
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }

chrono = "0.4.41"
rand = "0.9.0"
markdown = "1.0.0"
# const_format = "0.2.34"
# tap = "1.0.1"
