[package]
name = "questionable"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"

egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["default", "image"] }
eframe = { version = "0.33.2", features = ["default", "wgpu"] }

rust-i18n = "3.1.4"
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }

chrono = "0.4.41"
markdown = "1.0.0"
# const_format = "0.2.34"
# tap = "1.0.1"
# futures = { version = "0.3", features = ["thread-pool", "executor"] }
